--- a/assets/css/site/_0.1-config--variables.scss
+++ b/assets/css/site/_0.1-config--variables.scss
@@ -1,6 +1,10 @@
 // 0. CONFIG [ 0.1. VARIABLES ]  ######################################################################################
 // A. BRAND COLOR VARIABLES +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
+$kd-lilac:          #E6EBF1;
+$kd-mauve:          #BBC5CE;
+$kd-royal:          #000A3F;
+
 $ia-blue:           #42C2F3;
 $ia-blueDark:       #3A5181;
 $ia-blueLight:      #4A90E2;
