--- a/assets/css/site/_2.4-section--about.scss
+++ b/assets/css/site/_2.4-section--about.scss
@@ -8,18 +8,11 @@
 
 // A.2. DIFFERENT -----------------------------------------------------------------------------------------------------
 
-#section-different {
+#section-our-vision {
 
-    background: $ia-grey20;
-    background-size: cover;
-
-    // RESPONSIVE
+    background: $kd-royal;
     padding: 0 0 40px 0;
-    // RESPONSIVE
-
-    color: #818181;
-
-    // A.2.1 Components
+    color: $ia-grey20;
 
     //B.1.1. page header
 
@@ -27,56 +20,32 @@
 
         h2 {
             
-            color: $ia-grey90;
+            color: $ia-grey20;
             margin: 0 0 35px 0;
             line-height: normal;
             
         }
 
-        p { color: $ia-grey60; }					
+        p { color: $ia-grey20; }					
     }
 
     //B.1.2. Objective Icon
-
-    .icon {
+    
+    .figure__our-vision {
         
-        text-align: center;
-        border: 2px solid $ia-red;
-        border-radius: 100%;
+        margin: 0;
+        
+        img { width: 100%; height: auto; }
         
     }
-
-//B.1.3. Objective Grid
-
-.attributes-group	{
-@extend .grid;
-// RESPONSIVE
-margin-top: 60px;
-// RESPONSIVE
-
-text-align: center;
-color: #D0D0D0;
-
-//B.1.3.1. Objective Grid Item Details
-
-.attributes-item	{
-@extend .mobile--one-half;
-@extend .one-third;
-// RESPONSIVE
-margin-bottom: 20px;
-// RESPONSIVE
-h4 {
-text-transform: uppercase;
-}
-
-span {
-color: #929497;
-font-size: 0.85em;
-
-}
-}
-
-}			
+    
+    //B.1.3. Our Vision Text
+    
+    .our-vision {
+        
+        p { text-align: left; margin-left: $baseline; }
+        
+    }
 
 
 .figure-teamBottom {
@@ -103,7 +72,7 @@ margin: 60px 0 -60px 0;
 @include media-query(feature) {
 
     // A.1.1 ABOUT US
-    #section-different {	
+    #section-our-vision {	
 
         // RESPONSIVE
         padding: 0 0 40px 0;
@@ -127,21 +96,7 @@ margin: 60px 0 -60px 0;
         //B.1.2. Objective Icon
 
         //B.1.3. Objective Grid
-
-        .attributes-group	{
-
-            // RESPONSIVE
-            margin: 60px auto 0 auto;
-            // RESPONSIVE
-
-            //B.1.3.1. Objective Grid Item Details
-
-            .attributes-item	{
-                // RESPONSIVE
-                margin-bottom: 20px;
-                // RESPONSIVE
-            }
-        }			
+		
         // B.1. End
     }
     // A.1.1. END
@@ -154,7 +109,7 @@ margin: 60px 0 -60px 0;
 
 @include media-query(mobile) {
 
-    #section-different {	
+    #section-our-vision {	
 
         // RESPONSIVE
         padding: 0 0 40px 0;
@@ -179,21 +134,7 @@ margin: 60px 0 -60px 0;
 
         //B.1.3. Objective Grid
 
-        .attributes-group	{
 
-            // RESPONSIVE
-            margin: 60px auto 0 auto;
-            // RESPONSIVE
-
-            //B.1.3.1. Objective Grid Item Details
-
-            .attributes-item	{
-                // RESPONSIVE
-                margin-bottom: 20px;
-                // RESPONSIVE
-            }
-        }			
-        // B.1. End
     }
 
 }
@@ -206,10 +147,17 @@ margin: 60px 0 -60px 0;
 
     // A.1.1 ABOUT US
 
-    #section-different {
+    #section-our-vision {
 
         .container { margin: 0 $baseline-small; }   
+    
+        //B.1.3. Our Vision Text
 
+        .our-vision {
+
+            p { font-size: $small; }
+
+        }
     }
 
     // A.1.1. END
@@ -224,7 +172,7 @@ margin: 60px 0 -60px 0;
 
     // A.1.1 ABOUT US
 
-    #section-different {
+    #section-our-vision {
 
         .container { margin: 0 auto; }   
 
@@ -242,10 +190,17 @@ margin: 60px 0 -60px 0;
 
     // A.1.1 ABOUT US
 
-    #section-different {
+    #section-our-vision {
 
-        .container { margin: 0 auto; }   
+        .container { margin: 0 auto; }
+    
+        //B.1.3. Our Vision Text
 
+        .our-vision {
+
+            p { font-size: $normal; }
+
+        }
     }
 
     // A.1.1. END
