--- a/assets/css/site/_site.scss
+++ b/assets/css/site/_site.scss
@@ -78,7 +78,7 @@
     @import	"_1.3-object--icons";
 
     // 1.4. MODALS
-    @import	"_1.4-object--modals";
+    @import	"_1.4-object--carousel";
 
     // 1.5. AUDIO
     @import	"_1.6-object--audio";
