--- a/assets/css/site/_1.4-object--carousel.scss
+++ b/assets/css/site/_1.4-object--carousel.scss
@@ -6,14 +6,79 @@
 
 // A.1.1 LINKS
 
-.wp-audio-shortcode {
-    
-    width: 90%!important;
-    visibility: visible!important;
-    padding: 0 $baseline-small;
-    box-sizing: border-box;
-    
+.jcarousel-wrapper {
+    margin: 0 auto;
+    position: relative;
+    border: 0;
 }
+
+/** Carousel **/
+
+.jcarousel {
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+}
+
+.jcarousel ul {
+    width: 20000em;
+    position: relative;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.jcarousel li {
+    width: 200px;
+    float: left;
+    border: 1px solid #fff;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.jcarousel img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+
+/** Carousel Pagination **/
+
+.jcarousel-pagination {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    margin: 0;
+}
+
+.jcarousel-pagination a {
+    text-decoration: none;
+    display: inline-block;
+
+    font-size: 11px;
+    height: 10px;
+    width: 10px;
+    line-height: 10px;
+
+    background: #fff;
+    color: #4E443C;
+    border-radius: 10px;
+    text-indent: -9999px;
+
+    margin-right: 7px;
+    box-shadow: 0 0 2px #4E443C;
+}
+
+.jcarousel-pagination a.active {
+    background: #4E443C;
+    color: #fff;
+    opacity: 1;
+    box-shadow: 0 0 2px #F0EFE7;
+}
+
 
 // A.1.1. END
 
