--- a/assets/css/site/_1.0.2-object--grids.scss
+++ b/assets/css/site/_1.0.2-object--grids.scss
@@ -25,6 +25,28 @@
     }
     
     // A.2. END -------------------------------------------------------------------------------------------------------
+            
+    // A.2. THIRD -----------------------------------------------------------------------------------------------------
+
+    .one-third {
+        
+        @extend .grid__item;
+        @extend .one-third;
+
+    }
+    
+    // A.2. END -------------------------------------------------------------------------------------------------------
+            
+    // A.2. QUARTER ---------------------------------------------------------------------------------------------------
+
+    .one-quarter {
+        
+        @extend .grid__item;
+        @extend .one-quarter;
+
+    }
+    
+    // A.2. END -------------------------------------------------------------------------------------------------------
     
 }
 // A. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
