--- a/assets/css/site/_1.0.2-object--grids.scss
+++ b/assets/css/site/_1.0.2-object--grids.scss
@@ -47,6 +47,17 @@
     }
     
     // A.2. END -------------------------------------------------------------------------------------------------------
+                
+    // A.2. QUARTER ---------------------------------------------------------------------------------------------------
+
+    .one-tenth {
+        
+        @extend .grid__item;
+        @extend .one-tenth;
+
+    }
+    
+    // A.2. END -------------------------------------------------------------------------------------------------------
     
 }
 // A. END +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
