--- a/assets/css/site/_2.1-section--masthead.scss
+++ b/assets/css/site/_2.1-section--masthead.scss
@@ -45,7 +45,7 @@
                     margin-right: $baseline-small;
 
                     &:hover {
-                        color: $ia-red;
+                        color: $white;
                         text-decoration: none;
                     }
                 }
