--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -2074,7 +2074,7 @@ a {
           vertical-align: middle;
           margin-right: 10px; }
           #masthead .nav-main ul li a:hover {
-            color: #FF625F;
+            color: #fff;
             text-decoration: none; }
         #masthead .nav-main ul li a:link img {
           vertical-align: middle;
