--- a/assets/css/site/_site.scss
+++ b/assets/css/site/_site.scss
@@ -81,7 +81,7 @@
     @import	"_1.4-object--carousel";
 
     // 1.5. AUDIO
-    @import	"_1.6-object--audio";
+    @import	"_1.6-object--modals";
 
 // 2. SECTIONS ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 
