--- a/assets/css/site/_2.6-section--artists.scss
+++ b/assets/css/site/_2.6-section--artists.scss
@@ -39,6 +39,13 @@
             padding: 0 40px;
         }
     }
+    
+    .team-carousel {
+        
+        width: 60%;
+        margin-top: $baseline-large;
+        
+    }
 }
 
 // A.2. END -----------------------------------------------------------------------------------------------------------
