--- a/assets/css/site/_1.6-object--modals.scss
+++ b/assets/css/site/_1.6-object--modals.scss
@@ -71,7 +71,7 @@
 
     position: absolute;
     color: $white;
-    background: $ia-red;
+    background: $kd-royal;
     top: 20px;
     font-size: $large;
     right: 20px;
