--- a/assets/css/site/_2.6-section--artists.scss
+++ b/assets/css/site/_2.6-section--artists.scss
@@ -48,6 +48,7 @@
             
             position: relative;
             overflow: hidden;
+            @extend .tablet--one-quarter;
             @extend .mobile--one-half;
             @extend .feature--one-half;
             
