--- a/assets/css/site/_site.scss
+++ b/assets/css/site/_site.scss
@@ -47,6 +47,9 @@
     // 0.1. Variables
     @import	"_0.1-config--variables";
 
+    // 0.2. Fonts
+    @import	"_0.2-config--fonts";
+
     // 1.0. MIXINS
     @import	"_1.0-object--mixins";
 
